# wsl-dashboard

./: Cargo.toml  README.md
assets/i18n/: ar.toml  bn.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  fi.toml  fr.toml  he.toml  hi.toml  hu.toml  id.toml  is.toml  it.toml  ja.toml  ko.toml  nl.toml  no.toml  pt.toml  ru.toml  sk.toml  sl.toml  sv.toml  tr.toml  ur.toml  zh-CN.toml  zh-TW.toml
assets/logo/: icon.rc
manual/: README_ar.md  README_bn.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fi.md  README_fr.md  README_he.md  README_hi.md  README_hu.md  README_id.md  README_is.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_no.md  README_pt.md  README_ru.md  README_sk.md  README_sl.md  README_sv.md  README_tr.md  README_ur.md  README_zh_CN.md  README_zh_TW.md
src/: main.rs
src/app/: autostart.rs  startup.rs  state.rs  tasks.rs  tray.rs
src/config/: mod.rs  models.rs
src/ui/: app.slint  data.rs  theme.slint
src/ui/components/: common.slint  dialogs.slint  distro_card.slint  form_widgets.slint  modal_manager.slint  sidebar.slint  title_bar.slint  usb_card.slint
src/ui/components/dialogs/: clone_dialog.slint  settings_dialog.slint  wsl_config_dialog.slint
src/ui/handlers/: common.rs  instance.rs  mod.rs  settings.rs  usb.rs
src/ui/handlers/distro/: config_logic.rs  manage.rs  mod.rs  settings_logic.rs
src/ui/views/: main_view.slint  settings_view.slint  usb_view.slint
src/usb/: mod.rs
src/utils/: registry.rs  system.rs  time.rs
src/wsl/: executor.rs
src/wsl/dashboard/: mod.rs
src/wsl/ops/: config.rs  mod.rs
